plugins {
    id 'java'
    id 'application'
    id 'com.google.cloud.tools.jib' version '3.4.3'
}

group 'io.github.plamentotev'

sourceCompatibility = 11
targetCompatibility = 11


// Storing the dependencies on the file system (and the source code repository)
// is not a good idea but I didn't managed to find those artifacts
// in a public Maven repository that is still maintained.
dependencies {
    runtimeOnly fileTree('libs') { include '*.jar' }
}

mainClassName = 'io.github.plamentotev.xvalid.App'

// The default arguments to pass to the JVM.
// Used both for the start scripts and for the Docker image
def jvmArgs = ['-Xverify:none', '-XX:TieredStopAtLevel=1']

application {
    applicationDefaultJvmArgs = jvmArgs
}

jib {
    to {
        image = 'xvalid'
    }

    container {
        jvmFlags = jvmArgs
    }
}
